--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "element-react": "^1.4.34",
+    "element-theme-default": "^1.4.13",
     "firebase": "^7.17.2",
+    "fuse.js": "^6.4.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.1.2",
     "react-modal": "^3.11.2",
     "react-redux": "^7.2.1",
+    "react-router": "^5.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
